# scratchpad

./: .gitignore  .gitmodules
a2a-protocol/: README.md  pyproject.toml
a2a-protocol/airbnb_planner_multiagent/: NOTES.md  README.md  client.py  main.py  pyproject.toml  requirements.txt  start-client.sh
a2a-protocol/airbnb_planner_multiagent/agents/airbnb_agent/: airbnb_agent.py  airbnb_executor.py  main.py
a2a-protocol/airbnb_planner_multiagent/agents/routing_agent/: remote_agent_connection.py  routing_agent.py
a2a-protocol/airbnb_planner_multiagent/agents/weather_agent/: main.py  weather_agent.py  weather_executor.py  weather_mcp.py
a2a-protocol/airbnb_planner_multiagent/scripts/hurl/: airbnb_agent.hurl  weather_agent.hurl
a2a-protocol/servers/: env.example  pyproject.toml
a2a-protocol/servers/hello-world/: client.py
a2a-protocol/servers/hello-world/server/: agent_executor.py  main.py
a2a-protocol/servers/langgraph/: NOTES.md  client.py
a2a-protocol/servers/langgraph/server/: agent_executor.py  main.py
agui-a2a/: NOTES.md  mise.toml
board-of-advisors/: NOTES.md  mise.toml  package.json  pnpm-lock.yaml
board-of-advisors-api-only/: package.json
code-sandboxes/: MISSION.md  NOTES.md  user-notes.md
copilot-kit/: NOTES.md
copilot-kit/a2a-travel-demo-app/agents/: budget_agent.py  itinerary_agent.py  orchestrator.py  pyproject.toml  restaurant_agent.py  weather_agent.py
craw4ai-w-fast-api/: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  models.py  pyproject.toml  scraper.py
crawlee-crawler/: .dockerignore  docker-compose.yml  package-lock.json  package.json  tsconfig.json
deep-agents-from-scratch/: README.md  mise.toml
deep-learning/: .gitignore
deep-research-from-scratch/20260623-langgraph/: pyproject.toml
deep-research-from-scratch/20260623-langgraph/src/: agent.py  main.py  prompts.py  tools.py
deepeval-playground/: README.md  eval.py  main.py  pyproject.toml
lgraph-hil-w-pne/: README.md  env.ts  package-lock.json  package.json
lgraph-pne-w-hitl-w-parallel/: env.ts  package-lock.json  package.json
rag-lgraph/: README.md  (+7 more)
(+304 files in other folders)
