[project]
name = "20260623-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.6.11",
    "httpx>=0.28.1",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.3",
    "markdownify>=1.2.2",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.26",
]
